discord page complete

--- a/style.css
+++ b/style.css
@@ -70,10 +70,16 @@ li {
     justify-content: center;
 }
 
+#about,
+#discord,
+#contact {
+    padding: 48px 0;
+}
+
 /* ABOUT */
 
+
 #about {
-    padding: 48px 0;
     background-color: #f8ffdc;
 }
 
@@ -108,3 +114,10 @@ img {
     line-height: 1.5;
     margin-bottom: 24px;
 }
+
+/* DISCORD */
+
+#discord {
+    background-color: #cefeff;
+}
+
