--- a/style.css
+++ b/style.css
@@ -121,3 +121,22 @@ img {
     background-color: #cefeff;
 }
 
+/* CONTACT */
+
+#contact {
+    background-color: #dce9ff;
+}
+
+form {
+    width: 100%;
+    max-width: 600px; 
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+input, textarea {
+    margin-bottom: 24px;
+    font-size: 20px;
+    padding: 6px 12px;
+}
