--- a/style.css
+++ b/style.css
@@ -68,11 +68,13 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
 }
 
 #about,
 #discord,
-#contact {
+#contact,
+footer {
     padding: 48px 0;
 }
 
@@ -139,4 +141,26 @@ input, textarea {
     margin-bottom: 24px;
     font-size: 20px;
     padding: 6px 12px;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #aaf5ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__logo {
+    max-width: 480px;
+    margin-bottom: 16px;
+}
+
+.footer__links {
+    margin-bottom: 32px;
+}
+
+.footer__link {
+    padding: 0 16px;
 }
